--- a/home/techguides/create-publish-template.html
+++ b/home/techguides/create-publish-template.html
@@ -87,21 +87,42 @@
 <h1 id="create-and-publish-the-new-template-after-the-successful-factory-run">Create and Publish the New Template after the Successful Factory Run</h1>
 <p>There are two alternatives to Create and Publish the new Template after the Successful Run:</p>
 <ol>
-<li>Automated trigger </li>
+<li>Automated trigger <ul>
 <li>save the New Template from the Factory Run </li>
 <li>go to Dashboard</li>
 <li>on the Factory Run click on &#39;Actions&#39; and select from the drop-down &#39;Create New Template</li>
+</ul>
+</li>
 </ol>
 <p><img src="./images/run-factory-completed.png" alt=""></p>
 <ol>
-<li>Manual trigger </li>
+<li>Manual trigger <ul>
 <li>click on the newly created environment</li>
 <li>on the right side of the page click on &#39;Save as a new template&#39;</li>
 <li>type in the Template Name and a brief description </li>
+</ul>
+</li>
 </ol>
 <p><img src="images/save-new-template.png" alt=""></p>
 <p>To see the new template, go to the Templates Catalogue tab. Your template is now available in your templates list.</p>
 <p><img src="images/new-template.png" alt=""></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ COMPONENTS</li>
+<li>MANAGE _ STREAMS</li>
+<li>MANAGE _ STAGES</li>
+<li>MANAGE _ PRODUCTS</li>
+<li>CREATE _ FACTORY</li>
+<li>UPDATE _ FACTORY</li>
+<li>DELETE _ FACTORY</li>
+<li>SCHEDULE _ FACTORY</li>
+<li>START  -      FACTORY      -  RUN</li>
+<li>ABORT  -  FACTORY  -  RUN</li>
+<li>VIEW  -  FACTORY  -  RUN  _  HISTORY</li>
+<li>ALLOW  -  CUSTOM  -  TEMPLATES</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
