--- a/home/techguides/run-factory.html
+++ b/home/techguides/run-factory.html
@@ -122,6 +122,22 @@
 <p>If  you want to have the creation of the new template enabled even when the factory run fails go to General on the left side of the menu and select the &#39;Setup Factory&#39; tab. Tick the &#39;Yes&#39; value that corresponds to the key &#39;Do you want to allow creation of template from failed factories&#39;.</p>
 </div>
 <p><img src="images/trigger-new-template.png" alt=""></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ COMPONENTS</li>
+<li>MANAGE _ STREAMS</li>
+<li>MANAGE _ STAGES</li>
+<li>MANAGE _ PRODUCTS</li>
+<li>CREATE _ FACTORY</li>
+<li>UPDATE _ FACTORY</li>
+<li>DELETE _ FACTORY</li>
+<li>SCHEDULE _ FACTORY</li>
+<li>START - FACTORY - RUN</li>
+<li>ABORT - FACTORY - RUN</li>
+<li>VIEW - FACTORY - RUN - HISTORY</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
