--- a/home/techguides/stage-testcases.html
+++ b/home/techguides/stage-testcases.html
@@ -94,6 +94,12 @@
 <h2 id="delete-test-cases">Delete Test Cases</h2>
 <p>In order to delete the uploaded test cases, click on testcases.zip file, then on the Actions button (under Deploy) and Delete.</p>
 <p> <img src="images/testcases-delete.png" alt=""></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operation the below permission needs to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ STAGES</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
