--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -145,6 +145,16 @@ The parts of the stream are listed below:</p>
 </ul>
 <p><img src="./images/streams-delete-streams.png" alt=""></p>
 <p>If you have added other stages and also components and products, first delete all the products, then the components, then the associated stages and finally you will be able to delete the stream. In case you skip one of these features deletion, the system will notify that is not possible to delete the respective stage.</p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ STREAMS</li>
+<li>CREATE _ STREAM</li>
+<li>UPDATE _ STREAM</li>
+<li>DELETE _ STREAM</li>
+<li>CLONE _ STREAM</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
