--- a/home/techguides/access-t24-ud-directories.html
+++ b/home/techguides/access-t24-ud-directories.html
@@ -210,7 +210,7 @@ server.log - shows the Jboss application log (standalone folder appeas only for 
 </div>
 <h2 id="des---data-event-streaming">DES - Data Event Streaming</h2>
 <p>Please follow the instructions from this <a href="http://gva2flare.temenosgroup.com/R19ID/R19ID.htm#../Subsystems/R19TechUG/Content/Integration%20Framework/User%20Guides/DataEventStreaming201902/Data%20Event%20Streaming.htm%3FTocPath%3DUser%2520Guides%7CEnterprise%2520Frameworks%7CIntegration%2520Framework%7CData%2520Event%2520Streaming%7C_____0">link</a> to learn how to access the events.</p>
-<h1 id="user-roles-required">User Roles Required</h1>
+<h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ USER</li>
