--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -218,7 +218,7 @@
 <li>In the new screen, scroll down until you see the updates that were added.</li>
 </ul>
 <p><img src="images/make-updates-show-updates.png" alt="make updates show updates"></p>
-<h1 id="user-roles-required">User Roles Required</h1>
+<h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>UPDATE _ USER (to add the SSH Key if this hasn&#39;t been done after creating the user)</li>
