--- a/home/techguides/export-import-database.html
+++ b/home/techguides/export-import-database.html
@@ -228,14 +228,14 @@
 </li>
 </ul>
 <p><img src="./images/db-check-record.png" alt=""> </p>
-<h1 id="user-roles-required">User Roles Required</h1>
+<h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
 <li>UPDATE _ ENVIRONMENT</li>
 <li>REDEPLOY _ ENVIRONMENT</li>
 <li>MANAGE _ ENVIRONMENTS</li>
-<li>ALLOW <em> EXPORT </em> ENVIRONMENT</li>
+<li>ALLOW -  EXPORT  - ENVIRONMENT</li>
 </ul>
 <p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
