--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -177,6 +177,18 @@ The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options ar
 <li>The products, stages and streams created before can be re-used.</li>
 </ul>
 <p><img src="images/factory-edit-delete.png" alt="factory-scheduler"></p>
+<h1 id="user-permissions-required">User Permissions Required</h1>
+<p>To be able to perform the above operations the following permissions need to be enabled for your user:</p>
+<ul>
+<li>MANAGE _ COMPONENTS</li>
+<li>MANAGE _ STREAMS</li>
+<li>MANAGE _ STAGES</li>
+<li>MANAGE _ PRODUCTS</li>
+<li>CREATE _ FACTORY</li>
+<li>UPDATE _ FACTORY</li>
+<li>DELETE _ FACTORY</li>
+</ul>
+<p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to get an overview of the permissions.</p>
 <p><br></p>
               <hr>
               
