--- a/home/techguides/fcm-configuration.html
+++ b/home/techguides/fcm-configuration.html
@@ -192,7 +192,7 @@ When disconnecting and re-connecting to the server, the <strong>input</strong> f
 </ul>
 <p><img src="images/fcm-check-messages.png" alt="check messages"> </p>
 <p><br></p>
-<h1 id="user-roles-required">User Roles Required</h1>
+<h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ USER</li>
