--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -110,7 +110,7 @@
 </ul>
 <p>More about the pre-requisites, import / export T24 applications can be found  <a href="http://documentation.temenos.cloud/home/pdf/develop-T24-packages.pdf " target="_blank"><u><strong>here</strong></u></a>.</p>
 <p><br></p>
-<h1 id="user-roles-required">User Roles Required</h1>
+<h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
 <li>CREATE _ ENVIRONMENT</li>
