--- a/home/manage-stages-video.html
+++ b/home/manage-stages-video.html
@@ -82,13 +82,13 @@
 
 <html>
  <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/EPphRh8L48c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/64pq5mFMxeA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  </body>
 </html>
 
 
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>4:34 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>4:42 minutes</strong>
 <br></p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
