--- a/home/manage-streams-video.html
+++ b/home/manage-streams-video.html
@@ -80,11 +80,11 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/g8xS8aY0IYc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/RV60AliZOJ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  
 </p>
 <p><br>
-<span style="color:#005294"><strong>Total video time</strong></span>: <strong>7:56 minutes</strong>
+<span style="color:#005294"><strong>Total video time</strong></span>: <strong>5:30 minutes</strong>
 <br></p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
