--- a/home/techguides/selenium-test-template.html
+++ b/home/techguides/selenium-test-template.html
@@ -88,7 +88,7 @@
 <li>Firefox</li>
 </ul>
 <p>The structure of the application will be displayed as below. The main class for the application is <strong>EntryPoint.java</strong>.</p>
-<p><img src="images/selenium-test.png" alt=""></p>
+<p> <img src="images/selenium-test.png" alt=""></p>
 <h1 id="structural-design-of-the-application">Structural design of the application</h1>
 <p>The application is using the Factory pattern having a DriverManager class which has 2 implementations for both Firefox and Driver browsers. These are defined in:</p>
 <ul>
@@ -107,13 +107,13 @@
 </ul>
 <h2 id="b---automation-driver-executable">B.   Automation-driver-executable</h2>
 <p>This folder contains all the drivers for the Selenium Webdriver:
- <img src="images/selenium-drivers.png" alt=""></p>
+<img src="images/selenium-drivers.png" alt=""></p>
 <ul>
 <li><p>the automation-driver-executable folder contains:</p>
 <p><img src="images/selenium-automation-driver-executable.png" alt=""></p>
 </li>
 <li><p>the automation-driver-libraries folder contains the Java Selenium WebDriver libraries:</p>
-<p><img src="./images/selenium-automation-driver-libraries.png" alt=""></p>
+<p><img src="images/selenium-automation-driver-libraries.png" alt=""> </p>
 </li>
 </ul>
 <h2 id="c---automation-screenshots">C.   Automation-screenshots</h2>
@@ -142,7 +142,7 @@
 </ul>
 <h1 id="packaging-jar-file-and-running-with-params">Packaging JAR file and running with params</h1>
 <p>To the Jar file CLIENTAutomation a new automation-driver folder will be added as below:</p>
-<p><img src="./images/selenium-client-add-driver.png" alt=""></p>
+<p><img src="./images/selenium-client-add-driver.png" alt=""> </p>
 <p>After the automation-driver has been added, the package will be executed:</p>
 <p><img src="./images/selenium-execute.png" alt=""> </p>
 <p><br></p>
