--- a/home/techguides/selenium-test-template.html
+++ b/home/techguides/selenium-test-template.html
@@ -101,7 +101,7 @@
 <h3 id="a-globalproperties-file">A. “global.properties” file</h3>
 <ul>
 <li>there are two <strong>browser.type</strong> options: Chrome and Firefox</li>
-<li><strong>organization.id</strong> represents the organization ID used to test the template</li>
+<li><strong>organization.id</strong> represents the Temenos Continuous Deployment Platform organization ID used to test the template</li>
 <li><p><strong>report.path</strong> represents the path where the report will be saved (HTML format with CSS)</p>
 <p><img src="images/report-path.png" alt=""> </p>
 </li>
@@ -136,7 +136,7 @@
 <ul>
 <li><p>the green parameter is the browser [firefox | chrome]</p>
 </li>
-<li><p>the red parameter represents the organization ID</p>
+<li><p>the red parameter represents the Temenos Continuous Deployment Platform organization ID</p>
 </li>
 <li><p>the blue parameter represents the folder which stores the report</p>
 </li>
