--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -104,9 +104,9 @@
 <ul>
 <li><p><strong>Test suite 1</strong> (this could be any name - it is assumed this as a suite of tests that needs to be executed)</p>
 <ul>
-<li><p>1 or multiple jar files:</p>
+<li><p>1 or multiple .jar files:</p>
 <ul>
-<li><p>these files contain the selenium test cases to be executed</p>
+<li><p>these files contain the elenium test cases to be executed</p>
 </li>
 <li><p>this must copy all the test results to F:/TCD/TestResults folder</p>
 <ul>
@@ -122,27 +122,27 @@
 <li>all the libraries that are needed by the test cases must be kept here. This includes the Selenium library, its extension and its dependencies.</li>
 </ul>
 </li>
-<li><p>properties file with at least the following  properties  (“sys.t24.IP”, “sys.t24.port&quot;, “sys.test.results.folder”, “sys.web.driver.folder”)</p>
+<li><p>property file with at least the following  properties  (“sys.t24.IP”, “sys.t24.port&quot;, “sys.test.results.folder”, “sys.web.driver.folder”)</p>
 <ul>
-<li><p>while the test VM is provisioned, Temenos Continuous Deployment Platform will alter these values based on the IP and Port of the T24 VM.</p>
+<li><p>while the test VM is provisioned, Temenos Continuous Deployment Platform will alter these values based on the IP and Port of the T24 VM</p>
 </li>
 <li><p>it will change the value of “sys.test.results.folder“ to “F://TCD//TestResults”</p>
 </li>
 <li><p>it will change the value of “sys.web.driver.folder“ to “F://TCD//WebDriver”</p>
 </li>
-<li><p>it is assumed that the user name and password will be known the clients writing test cases and the same will be present in the golden copy.</p>
+<li><p>it is assumed that the user name and password will be known by the clients writing test cases and the same will be present in the golden copy</p>
 </li>
-<li><p>this property file can have other properties needed by the jar files, but the Temenos Continuous Deployment Platform will not alter these values at run time.</p>
+<li><p>this property file can have other properties needed by the jar files, but the Temenos Continuous Deployment Platform will not alter these values at the run time</p>
 </li>
 </ul>
 </li>
 <li><p>a text file named “CommandsToExceute.txt”</p>
 <ul>
-<li><p>the Temenos Continuous Deployment Platform will execute all the commands listed here.</p>
+<li><p>the Temenos Continuous Deployment Platform will execute all the commands listed here</p>
 </li>
-<li><p>the Temenos Continuous Deployment Platform will validate whether all the commands are  “Java” commands before executing.</p>
+<li><p>the Temenos Continuous Deployment Platform will validate whether all the commands are  “Java” commands before executing</p>
 </li>
-<li><p>any other commands present here, will result in termination of Factory run saying deployment failure with details mentioning why it failed.</p>
+<li><p>any other commands present here, will result in termination of Factory run saying deployment failure with details mentioning why it failed</p>
 </li>
 </ul>
 </li>
@@ -165,26 +165,26 @@
 <p><img src="images/selenium-automation-1.png" alt=""></p>
 <p><br>
 </br></p>
-<p><strong>Lib Folder |--&gt;</strong></p>
-<p>The lib folder contains the libraries used by the selenium framework. We expect all the library must be present the same folder and the relative path should be handled in the test framework.</p>
+<p><strong>Lib Folder</strong></p>
+<p>The lib folder contains the libraries used by the Selenium framework. We expect all the library to be present in the same folder and the relative path should be handled in the test framework.</p>
 <p><img src="images/selenium-automation-2.png" alt=""></p>
 <p><br>
 </br></p>
-<p><strong>.properties file |--&gt;</strong></p>
-<p>The properties file holds the configurable parameters used by the selenium framework. Some of the parameters have static values.</p>
-<p>For instance, sys.t24.IP=<a href="http://127.0.0.1:9080/BrowserWeb">http://127.0.0.1:9080/BrowserWeb</a> value is something replaced dynamically at the run time. The same applies to all parameters highlighted in the RedBox</p>
+<p><strong>.properties file</strong></p>
+<p>The properties file holds the configurable parameters used by the Selenium framework. Some of the parameters have static values.</p>
+<p>For instance, sys.t24.IP=<a href="http://127.0.0.1:9080/BrowserWeb">http://127.0.0.1:9080/BrowserWeb</a> value is replaced dynamically at the run time. The same applies to all parameters highlighted in the RedBox</p>
 <p><img src="images/selenium-automation-3.png" alt=""></p>
 <p><br>
 </br></p>
-<p><strong>TestCase.jar |--&gt;</strong></p>
-<p>We expect the test cases must be compiled as an executable file. </p>
+<p><strong>TestCase.jar</strong></p>
+<p>We expect the test cases to be compiled as an executable file. </p>
 <p>Note: The Selenium_Automation.zip can have multiple *.jar files. </p>
 <p><img src="images/selenium-automation-4.png" alt=""></p>
 <p><br>
 </br></p>
-<p><strong>CommandsToExecute.txt |--&gt;</strong></p>
-<p>This file contains the list of commands TCD will execute in sequence. We expect the command should start with “java”, anything other than java command will be considered as deployment failure.</p>
-<p>In case if the Test script has more jar files then execution of the files can be handled in the CommandsToExecute file but please remember that we will validate the command and execute it only if it starts with “java” so assuming any other pre-requisites and environment variable will be passed as a runtime parameter.</p>
+<p><strong>CommandsToExecute.txt</strong></p>
+<p>This file contains the list of commands that the Temenos Continuous Deployment Platform will execute in sequence. We expect the command to start with “java” as anything other than the java command will be considered as deployment failure.</p>
+<p>In case the Test script has more jar files then the execution of the files can be handled in the CommandsToExecute file. Nonetheless, please remember that will validate the command and execute it only if it starts with “java” so assuming any other pre-requisites and environment variable will be passed as a runtime parameter.</p>
 <p><img src="images/selenium-automation-5.png" alt=""></p>
 <p><br></p>
               <hr>
