--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -81,6 +81,8 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="selenium-test-template-implementation">Selenium Test Template Implementation</h1>
 
+<div class="NOTE"><h5>Note</h5><p>The below instructions may be updated shortly.</p>
+</div>
 <p>This page explains the steps needed to be followed in order to do the Java implementation for a Selenium Test Template based on the client&#39;s framework.</p>
 <h2 id="implementation">Implementation</h2>
 <p>The Selenium Template will provision the following:</p>
