--- a/home/techguides/selenium-template.html
+++ b/home/techguides/selenium-template.html
@@ -175,8 +175,8 @@
 <h3 id="properties-file"><strong>.properties file</strong></h3>
 <p>The properties file holds the configurable parameters used by the Selenium framework. Some of the parameters have static values. Thus, the Temenos Continuous Deployment Platform expects them to be present in the properties file.</p>
 <p>For instance, sys.t24.IP=<a href="http://127.0.0.1:9080/BrowserWeb">http://127.0.0.1:9080/BrowserWeb</a> value is replaced dynamically at the run time. The same applies to all parameters highlighted in the RedBox below.</p>
-<div class="NOTE"><h5>Note</h5><p>T24 browser can use any FQDN and Port. However, the endpoint should be reachable by the test client VM in which the test cases will be executed</p>
-<p>Also if the test framework wants to support multiple T24 endpoints then it must be pre-configured same as sys.t24.browser.url</p>
+<div class="NOTE"><h5>Note</h5><p>T24 browser can use any FQDN and Port. However, the endpoint should be reachable by the test client VM in which the test cases will be executed.</p>
+<p>Also if the test framework wants to support multiple T24 endpoints then it must be pre-configured same as sys.t24.browser.url.</p>
 </div>
 <p><img src="images/selenium-automation-3.png" alt=""></p>
 <p><br>
@@ -219,11 +219,11 @@ The test framework should generate the manifest.xml file with the above details.
 </tr>
 <tr>
 <td>failedTests</td>
-<td>Number of failed test cases in the current run</td>
+<td>Number of failed test cases in the current run.</td>
 </tr>
 <tr>
 <td>totalTests</td>
-<td>The overall test cases count in the respective run</td>
+<td>The overall test cases count in the respective run.</td>
 </tr>
 <tr>
 <td>result</td>
