--- a/home/techguides/factories.html
+++ b/home/techguides/factories.html
@@ -191,7 +191,7 @@ The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options ar
 <br>
 </br></p>
 </li>
-<li><p>Create a new <strong>Component</strong> (eg. TestCase01) in the portal. The **Component Type **will be ‘TestScript’ </p>
+<li><p>Create a new <strong>Component</strong> (eg. TestCase01) in the portal. The <strong>Component Type</strong> will be ‘TestScript’ </p>
 <p><img src="images/factory-migration-5.png" alt="factory-migration-5">
 <br>
 </br></p>
